Fixed the alignments in css

--- a/src/style.css
+++ b/src/style.css
@@ -77,13 +77,14 @@ li::first-letter {
 }
 
 .weather-forecast {
-  margin-top: 18px;
+  margin-top: 20px;
   text-align: center;
   color: black;
 }
 
 .weather-forecast-date {
-  font-size: 14px;
+  font-size: 16px;
+  text-align: none;
   opacity: 0.5;
 }
 
@@ -92,5 +93,5 @@ li::first-letter {
 }
 
 .weather-forecast-temperatures {
-  font-size: 11px;
+  font-size: 13px;
 }
